atlantis/k8s/00-namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: atlantis-vcs
  labels:
    app.kubernetes.io/name: atlantis-vcs
