atlantis/k8s/01-statefulset.yml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: atlantis
  namespace: atlantis-vcs
spec:
  serviceName: atlantis
  replicas: 1
  updateStrategy:
    type: RollingUpdate
    rollingUpdate:
      partition: 0
  selector:
    matchLabels:
      app: atlantis
  template:
    metadata:
      labels:
        app: atlantis
    spec:
      securityContext:
        fsGroup: 1000 # Atlantis group (1000) read/write access to volumes.
      containers:
        - name: atlantis
          image: 920763156836.dkr.ecr.eu-west-1.amazonaws.com/nexmo-atlantis:0.15.1_27-01-2021
          volumeMounts:
            - name: atlantis-data
              mountPath: /atlantis
            - mountPath: /repos.yaml
              subPath: repos.yaml
              name: atlantis-repo-config
            - name: aws-credentials
              mountPath: /home/atlantis/.aws
          ports:
            - name: atlantis
              containerPort: 4141
          resources:
            requests:
              memory: 2Gi
              cpu: "1"
            limits:
              memory: 2Gi
              cpu: "3"
          livenessProbe:
            # We only need to check every 60s since Atlantis is not a
            # high-throughput service.
            periodSeconds: 60
            httpGet:
              path: /healthz
              port: 4141
              # If using https, change this to HTTPS
              scheme: HTTP
          readinessProbe:
            periodSeconds: 60
            httpGet:
              path: /healthz
              port: 4141
              # If using https, change this to HTTPS
              scheme: HTTP
          lifecycle:
            postStart:
              exec:
                command:
                  - "/bin/sh"
                  - "-c"
                  - |
                    echo -e ${AWS_CREDENTIALS} > /home/atlantis/.aws/credentials
                    git config --global credential.https://github.com.username ${ATLANTIS_GH_USER}
                    git config --global credential.https://github.com.helper '!f() { test "$1" = get && echo "password=${ATLANTIS_GH_TOKEN}"; }; f'
                    cp ~/.gitconfig /home/atlantis/.
      volumes:
      - configMap:
          defaultMode: 420
          name: atlantis-server-conf
        name: atlantis-repo-config
      - name: aws-credentials
        emptyDir:
          medium: Memory
  volumeClaimTemplates:
    - metadata:
        name: atlantis-data
      spec:
        accessModes: ["ReadWriteOnce"] # Volume should not be shared by multiple nodes.
        resources:
          requests:
            # The biggest thing Atlantis stores is the Git repo when it checks it out.
            # It deletes the repo after the pull request is merged.
            storage: 5Gi
---
apiVersion: v1
kind: Service
metadata:
  name: atlantis
  namespace: atlantis-vcs
spec:
  type: ClusterIP
  ports:
    - name: atlantis
      port: 80
      targetPort: 4141
  selector:
    app: atlantis
